@@ -1,3 +1,6 @@
+2017/01/10 v165
+	1. The label on nameplates will display a '+' for elite(yellow color), rare(white color), elite-rare(aqua color), boss(red color).
+
 2016/12/23 v164
 	1. Use esc to close container during combat would cause taint, since the problem can't be fixed, I'll bind escape key when the container is open and in-combat, and release it when continaer is closed or out-of-combat. It'd cause a tiny problem, you need esc twice to close all frames during combat, but I think it's acceptable.
 
